# kspike

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  ebpf.yml
crates/kspike-casper-ffi/src/: ffi.rs
crates/kspike-cli/: Cargo.toml
crates/kspike-cli/src/: main.rs
crates/kspike-daemon/src/: client.rs  main.rs  server.rs
crates/kspike-ebpf-lsm/bpf/src/: main.rs
crates/kspike-ebpf-lsm/src/: tap.rs
crates/kspike-judge/: Cargo.toml
crates/kspike-judge/src/: constraint_solver.rs  hybrid_reasoner.rs  lib.rs  multi_layer_judge.rs  proof_generator.rs  rule_parser.rs
crates/kspike-kernel/: Cargo.toml
crates/kspike-kernel/src/: lib.rs  tap.rs
crates/kspike-kforge/src/: lib.rs
crates/kspike-modules/: Cargo.toml
crates/kspike-modules/src/: engine.rs  lib.rs
crates/kspike-modules/src/msf_mirror/: eternalblue.rs  log4shell.rs  meterpreter.rs
crates/kspike-xdp-burp/: Cargo.toml
crates/kspike-xdp-burp/src/: lib.rs
