[package]
name        = "kspike"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "KSpike CLI console"

[[bin]]
name = "kspike"
path = "src/main.rs"

[features]
default  = ["strikers"]
strikers = []

[dependencies]
kspike-core    = { path = "../kspike-core" }
kspike-judge   = { path = "../kspike-judge" }
kspike-modules = { path = "../kspike-modules", features = ["all"] }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
