[package]
name        = "kspike-kernel"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "KSpike kernel surface: procfs/sysfs taps, nflog reader, packet inspection, memory canaries — the substrate under every built-in module"

[dependencies]
kspike-core = { path = "../kspike-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = []
# Enable real eBPF program attachment (requires CAP_BPF + kernel headers).
ebpf    = []
# Enable nfqueue/netfilter integration.
nf      = []
